# rust_3x4

./: .gitignore  Cargo.toml  LR_FINDER_README.md  analyze.py  mcts.md  plot_lr_finder.py  runlog.txt  tauri.conf.json
.github/: copilot-instructions.md
examples/: mcts_demo.rs
frontend/: index.html  main.js  main_tauri.js
src/: game_env.rs  inference.rs  lib.rs  main.rs  mcts.rs  nn_model.rs  parallel_train.rs  parallel_train_amp.rs  scenario_validation.rs  self_play.rs  tauri_main.rs  train.rs  training.rs  verify.rs  verify_2.rs  verify_samples.rs  verify_trained.rs
src/ai/: mcts_dl.rs  mod.rs
